--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,7 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
                     //XXX: Pass the data to the callback!
+                     callback(JSON.parse(xhr.responseText));
                 }
             } 
             catch(e) {
@@ -50,6 +51,10 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
     //XXX: POST to a URL
     //XXX: set the mimetype and the accept headers!
     // Remember to use application/json !
+    xhr.open("POST", url);
+    xhr.setRequestHeader("Accept", "*/*");
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.send(JSON.stringify(objects));
 }
 
 
@@ -64,9 +69,12 @@ function drawCircle(context,entity) {
         var y = entity["y"];
         //moveTo(x,y);
         fillStyle = entity["colour"];
+        
         strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
-        stroke();                                
+        //arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false); 
+        context.rect(x, y, entity["radius"], entity["radius"]);
+        stroke();
+        fill();                                
     }
 }
 
@@ -136,8 +144,10 @@ function getPosition(e) {
 
 function addEntity(entity, data) {
     world[entity] = data;
-    drawNextFrame(); // (but should we?)
+     // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
+    sendJSONXMLHTTPRequest("/entity/"+entity,data,function(){});
+    drawNextFrame();
 
 }
 
@@ -246,22 +256,67 @@ mouse = (function() {
 
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
+var change =1;
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'blue','radius':50});
+    addEntityWithoutName({'x':x,'y':y,'colour':'red','radius':40});
+    addEntityWithoutName({'x':x,'y':y,'colour':'blue','radius':30});
+    addEntityWithoutName({'x':x,'y':y,'colour':'red','radius':20});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'blue','radius':50});
+    addEntityWithoutName({'x':x,'y':y,'colour':'red','radius':40});
+    addEntityWithoutName({'x':x,'y':y,'colour':'blue','radius':30});
+    addEntityWithoutName({'x':x,'y':y,'colour':'red','radius':20});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
+    //colours of the rainbow
+    if(change == 1){
+    addEntityWithoutName({'x':x,'y':y,'colour':'red',
+                          'radius':10}); 
+	change = 2;
+    }
+    else if(change == 2){
+    addEntityWithoutName({'x':x,'y':y,'colour':'orange',
+                          'radius':10}); 
+	change = 3;
+    }
+    else if(change == 3){
+    addEntityWithoutName({'x':x,'y':y,'colour':'yellow',
+                          'radius':10}); 
+	change = 4;
+    }
+    else if(change == 4){
     addEntityWithoutName({'x':x,'y':y,'colour':'green',
-                          'radius':10});
+                          'radius':10}); 
+	change = 5;
+    }
+    else if(change == 5){
+    addEntityWithoutName({'x':x,'y':y,'colour':'blue',
+                          'radius':10}); 
+	change = 6;
+    }
+    else if(change == 6){
+    addEntityWithoutName({'x':x,'y':y,'colour':'indigo',
+                          'radius':10}); 
+	change = 7;
+    }
+    else if(change == 7){
+    addEntityWithoutName({'x':x,'y':y,'colour':'violet',
+                          'radius':10}); 
+	change = 1;
+    }
 });
 
 
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    sendJSONXMLHTTPRequest("/world", null, function(newWorld) {
+        world = newWorld;
+        drawNextFrame();
+    });
     drawFrame();
 }
 
